--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title:               IFT6758 Blog
+title:               ift6758 Blog
 tagline:             'A template based on the Lanyon Jekyll theme'
 description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:                 ''
