--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: "3.9"
 services:
-  web:
-    build: .
+
+  server:
+    build:
+      context: .
+      dockerfile: Dockerfile.serving
     ports:
       - "8080:8080"
+
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile.streamlit
+    ports:
+      - "8501:8501"
