--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: Dockerfile.serving
     ports:
       - "8080:8080"
+    environment:
+      - COMET_API_KEY
 
   web:
     build:
